Fixed bug of not removing participants when there were no debts